<resources>
    <string name="app_name">Vatarni</string>
    <string name="enternum">Enter your number img</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="get_otp">Get OTP</string>
    <string name="otpverification">OTPVerification</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="enterotp">Please enter your 6 OTP.</string>
    <string name="title_activity_profile_set_up">profileSetUp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="profile_info">Profile Info</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="change_profile_pic">Tap to change profile pic</string>
    <string name="_91">+91</string>
    <string name="continueBtn">Continue</string>
    <string name="home">Home</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="group">Groups\n</string>
    <string name="invite">Invite a friend</string>
    <string name="welcome_image">welcome image</string>
    <string name="mainMsg">Effortless, Stylish, Secure Chat for Gen-Z</string>
    <string name="description">Snap, share, and chat effortlessly. Be yourself and vibe with friends.\n</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="re_send_otp">Resend OTP</string>
    <string name="back">←</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="otp_send_msg">We will send you a one-time password (OTP) to verify your identity. Standard SMS rates may apply.</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <string name="full_name">Enter Full Name\n</string>
    <string name="finish">Finish</string>
    <string name="profile">Profile\n</string>
    <string name="enter_mail">Email</string>
    <string name="bio">Hey i\'m am using Vatarni</string>
    <string name="name">Your name</string>
    <string name="save_changes">Save Changes\n</string>
    <string name="logout">Logout\n</string>
    <string name="abut_developer">About Developer</string>
    <string name="privacy_policy">Privacy policy\n</string>
    <string name="tap_to_chat">Tap to chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">10:10AM</string>
    <string name="last_updated">Last Updated</string>
    <string name="delete">Delete</string>
</resources>