<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView" >
    </item>
    <item
        android:title="@string/group"
        android:id="@+id/group"


        />
    <item
        android:title="@string/invite"
        android:id="@+id/invite"

        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/aboutDeveloper"
        android:title="@string/abut_developer"
        />
    <item
        android:id="@+id/privacyPolicy"
        android:title="@string/privacy_policy"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        />
</menu>