<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/secondaryColor" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPicture"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="16dp"
            android:src="@drawable/user" />

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#EDEDED"
            app:cornerRadius="12dp"
            android:text="@string/edit_profile_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/secondaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textColor="@color/secondaryColor" />

            <TextView
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:text="@string/enter_mail"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:textColor="#6B6B6B" />

            <TextView
                android:id="@+id/userNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:textColor="#6B6B6B" />

            <TextView
                android:id="@+id/userBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/secondaryColor" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:onClick="finish"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp" />
    </LinearLayout>
</FrameLayout>
