<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSetUp"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/secondaryColor"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="16dp"
        android:src="@drawable/user"/>
    <Button
        android:id="@+id/edit_profile"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EDEDED"
        app:cornerRadius="12dp"
        android:text="@string/edit_profile_photo"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/secondaryColor"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/secondaryColor"
            />
        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:autofillHints="name"
            android:background="@drawable/phone_bg"
            android:gravity="start|center_vertical"
            android:hint="@string/full_name"
            android:inputType="textAutoCorrect"
            android:paddingStart="16dp"
            android:textColor="@color/secondaryColor"
            tools:ignore="RtlSymmetry" />



    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:onClick="finish"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp" />






</LinearLayout >